# NFL-helmet-assignment

./: .dockerignore  .gitmodules  .style.yapf  Dockerfile  README.md  install.sh  pyproject.toml  requirements.txt
app/: __main__.py
app/data_io/: nfl_dataloader.py  post_processing.py
app/homography/: homography.py  line.py  test_homography.py  transform_calculator.py
app/mapper/: frame_mapper.py  mapping_func.py  video_mapper.py
app/tracker/: tracker.py
app/visualize/: data_visualization.py  vis_match.py  vis_utils.py  visualizer.py
configs/: deepsort.yaml
